--- a/style_mobile.css
+++ b/style_mobile.css
@@ -34,6 +34,13 @@
     .project-section,
     .contact-section {
         padding: 100px 20px;
+        height: 50%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 
     .about,
