--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,9 +1,21 @@
 /* Mobile Styles */
 @media (max-width: 600px) {
-    .navbar {
+
+    /* .navbar {
         justify-content: flex-start;
         background: none;
         padding: 10px 20px;
+    } */
+    .navbar {
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9;
+        background: #1a1a1a;
     }
 
     .link-group {
@@ -34,7 +46,7 @@
     .project-section,
     .contact-section {
         padding: 100px 20px;
-        height: 50%;
+        height: 100%;
         width: 100%;
         display: flex;
         flex-direction: column;
