--- a/style_mobile.css
+++ b/style_mobile.css
@@ -8,6 +8,13 @@
         padding: 10px 20px;
     } */
 
+    body,
+    html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
+
     .navbar {
         width: 100%;
         position: fixed;
@@ -20,9 +27,16 @@
         background: none;
     }
 
+    /* 
     .link-group {
         list-style: none;
         display: flex;
+    } */
+
+    .link-group {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
     }
 
     .link a {
@@ -48,8 +62,9 @@
     }
 
     .home-img {
-        width: auto;
-        height: auto;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
     }
 
     .about-section,
