--- a/style_mobile.css
+++ b/style_mobile.css
@@ -107,7 +107,7 @@
     }
 
     .download-cv-btn {
-        padding: 10px 20px;
+        padding: 15px 20px;
         background-color: #333;
         color: white;
         border: none;
@@ -134,7 +134,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         /* Adjust columns as needed */
-        grid-gap: 15px;
+        grid-gap: 20px;
         color: #fff;
     }
 
@@ -142,7 +142,7 @@
     .timeline {
         display: block;
         width: 100%;
-        margin: 35px auto;
+        margin: 30px auto;
         /* Adjust as needed */
     }
 
@@ -159,6 +159,13 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
+    }
+
+    .project-info {
+        margin: 40px;
+        font-size: 10px;
+        line-height: 30px;
         text-align: center;
     }
 
