--- a/style_mobile.css
+++ b/style_mobile.css
@@ -164,8 +164,9 @@
 
     .project-info {
         margin: 40px;
-        font-size: 10px;
-        line-height: 30px;
+        font-size: 15px;
+        line-height: 25px;
+        text-transform: capitalize;
         text-align: center;
     }
 
